Added book management page

--- a/library-express/public/pages/homepage.html
+++ b/library-express/public/pages/homepage.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <body>
         <h1>Welcome to the Library</h1>
-        <a href="/title_management">Manage Titles</a>
+        <p>
+            <a href="/title_management">Manage Titles</a>
+        </p>
+        <p>
+            <a href="/books">Manage Book Inventory</a>
+        </p>
     </body>
 </html>
