Added links to patron pages on homepage

--- a/library-express/public/pages/homepage.html
+++ b/library-express/public/pages/homepage.html
@@ -8,5 +8,11 @@
         <p>
             <a href="/books">Manage Book Inventory</a>
         </p>
+        <p>
+            <a href="/add_patron">Add New Patron</a>
+        </p>
+        <p>
+            <a href="/patron_list">Patron List</a>
+        </p>
     </body>
 </html>
