Added loan page link to home page.

--- a/library-express/public/pages/homepage.html
+++ b/library-express/public/pages/homepage.html
@@ -14,5 +14,8 @@
         <p>
             <a href="/patron_list">Patron List</a>
         </p>
+        <p>
+            <a href="/create_loan">Create a Loan</a>
+        </p>
     </body>
 </html>
