Build book search using external API

--- a/library-express/public/pages/homepage.html
+++ b/library-express/public/pages/homepage.html
@@ -20,5 +20,8 @@
         <p>
             <a href="/create_loan">Create a Loan</a>
         </p>
+        <p>
+            <a href="/loan_status">Create New Loan Status</a>
+        </p>
     </body>
 </html>
