added new add_title.html and sidestepped API for title searches

--- a/library-express/public/pages/title_management.html
+++ b/library-express/public/pages/title_management.html
@@ -3,7 +3,8 @@
     <body>
         <div>
             <h3>Add Title to Library</h3>
-            <form action="/query_book_api" method="post">
+            <!-- <form action="/query_book_api" method="post"> -->
+            <form action="/add_title" method="get">
                 <p><label for="title">Title:</label><br>
                 <input type="text" id="title" name="title"></p>
                 <p><label for="author">Author:</label><br>
