--- a/library-express/public/pages/title_management.html
+++ b/library-express/public/pages/title_management.html
@@ -13,9 +13,13 @@
                 <label>Author: 
                     <input type="text" name="Author" />
                 </label>
+                <label>Publisher: 
+                    <input type="text" name="Publisher" />
+                </label>
                 <label>Date of Publication: 
                     <input type="date" name="PublishDated" />
                 </label>
+                
                 <button type="submit">Submit</button>
             </form>
         </div>
