Added link to edit loan page

--- a/library-express/public/pages/create_loan.html
+++ b/library-express/public/pages/create_loan.html
@@ -42,6 +42,9 @@
                         <td>Aaron Aaronson</td>
                         <td>11/1/2021</td>
                         <td>2</td>
+                        <td>
+                            <a href="/edit_loan">Edit</a>
+                        </td>
                     </tr>
                     <tr>
                         <td>Aaron Aaronson</td>
