--- a/library-express/public/pages/edit_loan.html
+++ b/library-express/public/pages/edit_loan.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        
+        <h1>Edit Loan</h1>
+        <div>
+            <label>Patron: 
+                <p>Aaron Aaronson</p>
+            </label>>
+        </div>
     </body>
 </html>
