--- a/library-express/public/pages/edit_loan.html
+++ b/library-express/public/pages/edit_loan.html
@@ -3,9 +3,44 @@
     <body>
         <h1>Edit Loan</h1>
         <div>
+            <button>Delete Loan</button>
             <label>Patron: 
                 <p>Aaron Aaronson</p>
-            </label>>
+            </label>
+            <label>Loan Date: 
+                <p>11/1/2021</p>
+            </label>
+            
         </div>
+        <table>
+            <caption>Renewing a book will automatically extend the due date by two weeks.</caption>
+            <thead>
+                <tr>
+                    <th>Book ID</th>
+                    <th>Title</th>
+                    <th>Due Date</th>
+                    <th>Loan Status</th>
+                    <th>Renewal Count</th>
+                    <th>Renew</th>
+                    <th>Confirm</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1234</td>
+                    <td>Pride and Prejudice</td>
+                    <td>11/15/2021</td>
+                    <td><select>
+                        <option value="On Loan">On Loan</option>
+                        <option value="Renew">Renew</option>
+                        <option value="Returned">Returned</option>
+                        <option value="Lost">Lost</option>
+                    </select></p></td>
+                    <td>0</td>
+                    <td><button>Renew</button></td>
+                    <td><button>Submit Changes</button></td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
