--- a/library-express/public/pages/edit_loan.html
+++ b/library-express/public/pages/edit_loan.html
@@ -40,6 +40,20 @@
                     <td><button>Renew</button></td>
                     <td><button>Submit Changes</button></td>
                 </tr>
+                <tr>
+                    <td>5678</td>
+                    <td>To Kill a Mockingbird</td>
+                    <td>11/15/2021</td>
+                    <td><select>
+                        <option value="On Loan">On Loan</option>
+                        <option value="Renew">Renew</option>
+                        <option value="Returned">Returned</option>
+                        <option value="Lost">Lost</option>
+                    </select></p></td>
+                    <td>0</td>
+                    <td><button>Renew</button></td>
+                    <td><button>Submit Changes</button></td>
+                </tr>
             </tbody>
         </table>
     </body>
