Changed location of delete loans button

--- a/library-express/public/pages/edit_loan.html
+++ b/library-express/public/pages/edit_loan.html
@@ -4,6 +4,8 @@
         <h1>Edit Loan</h1>
         <div>
             <button>Delete Loan</button>
+        </div>
+        <div>
             <label>Patron: 
                 <p>Aaron Aaronson</p>
             </label>
