--- a/library-express/public/pages/create_loan.html
+++ b/library-express/public/pages/create_loan.html
@@ -12,11 +12,12 @@
                     </select></p>
                 <p><label for="books">Choose the books: </label>
                 <select name="books" id="books" multiple>
-                    <option value="Pride and Prejudice">Pride and Prejudice</option>
-                    <option value="1984">1984</option>
-                    <option value="Crime and Punishment">Crime and Punishment</option>
-                    <option value="Hamlet">Hamlet</option>
-                    <option value="One Hundred Years of Solitude">One Hundred Years of Solitude</option>
+                    <option value="Pride and Prejudice">1234 - Pride and Prejudice</option>
+                    <option value="Pride and Prejudice">9543 - Pride and Prejudice</option>
+                    <option value="1984">7894 - 1984</option>
+                    <option value="Crime and Punishment">1654 - Crime and Punishment</option>
+                    <option value="Hamlet">1354 - Hamlet</option>
+                    <option value="One Hundred Years of Solitude">1356 - One Hundred Years of Solitude</option>
                 </select><br></br></p>
                 <p>
                     Due Date:  
