Added search by title capability to Books

--- a/library-express/public/pages/book_management.html
+++ b/library-express/public/pages/book_management.html
@@ -13,7 +13,14 @@
             <input type="date" name="purchase_date" />
             <button type="submit">Submit</button>
         </form>
-        <table>
+        <br>
+        <div>
+            <form>
+                <label>Search by Title: 
+                    <input type="text" />
+                </label>
+            </form>
+            <table>
             <caption>Titles</caption>
             <thead>
                 <th>Book ID</th>
@@ -62,5 +69,7 @@
                 </tr>
             </tbody>
         </table>
+        </div>
+        
     </body>
 </html>
