Moved link to the edit loan page to the home page

--- a/library-express/public/pages/create_loan.html
+++ b/library-express/public/pages/create_loan.html
@@ -42,6 +42,7 @@
                         <th>Patron</th>
                         <th>Loan Date</th>
                         <th>Book Count</th>
+                        <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -50,18 +51,20 @@
                         <td>11/1/2021</td>
                         <td>2</td>
                         <td>
-                            <a href="/edit_loan">Edit</a>
+                            <button>Delete</button>
                         </td>
                     </tr>
                     <tr>
                         <td>Aaron Aaronson</td>
                         <td>11/4/2021</td>
                         <td>1</td>
+                        <td><button>Delete</button></td>
                     </tr>
                     <tr>
                         <td>Jane Smith</td>
                         <td>11/1/2021</td>
                         <td>2</td>
+                        <td><button>Delete</button></td>
                     </tr>
                 </tbody>
             </table>
