--- a/library-express/public/pages/edit_loan.html
+++ b/library-express/public/pages/edit_loan.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        <h1>Edit Loan</h1>
-        <div>
-            <button>Delete Loan</button>
-        </div>
-        <div>
-            <label>Patron: 
-                <p>Aaron Aaronson</p>
-            </label>
-            <label>Loan Date: 
-                <p>11/1/2021</p>
-            </label>
-            
-        </div>
+        <h1>Loan Items</h1>
+
         <table>
             <caption>Renewing a book will automatically extend the due date by two weeks.</caption>
             <thead>
                 <tr>
+                    <th>Patron</th>
                     <th>Book ID</th>
                     <th>Title</th>
                     <th>Due Date</th>
@@ -29,6 +19,7 @@
             </thead>
             <tbody>
                 <tr>
+                    <td>Aaron Aaronson</td>
                     <td>1234</td>
                     <td>Pride and Prejudice</td>
                     <td>11/15/2021</td>
@@ -43,6 +34,7 @@
                     <td><button>Submit Changes</button></td>
                 </tr>
                 <tr>
+                    <td>Jane Smith</td>
                     <td>5678</td>
                     <td>To Kill a Mockingbird</td>
                     <td>11/15/2021</td>
