--- a/library-express/public/pages/homepage.html
+++ b/library-express/public/pages/homepage.html
@@ -20,5 +20,8 @@
         <p>
             <a href="/loan_status">Create New Loan Status</a>
         </p>
+        <p>
+            <a href="/edit_loan">Edit Loan Items</a>
+        </p>
     </body>
 </html>
